# aws-hack

./: .env.example  .gitignore  DEPLOYMENT.md  JUDGE_DEMO_GUIDE.md  README.md  demo_results.json  docker-compose.yml  pyproject.toml  start-dev-simple.ps1  start-dev.ps1  test_all_apis.py  test_anthropic_fallback.py  test_anthropic_simple.py
apps/api/: __init__.py  main.py  main_simple.py
apps/api/routers/: analyze.py
apps/shared/: __init__.py
apps/shared/models/: __init__.py  risk_inputs.py
apps/shared/utils/: __init__.py  clarifai_ndvi.py  make_webhook.py  overpass_client.py  satellite_analysis.py  satellite_client.py  weather_client.py
apps/web/: .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/app/: page.tsx
apps/web/src/app/landing/: page.tsx
apps/web/src/components/: AnalysisProgress.tsx  ChainOfThought.tsx  FeaturesSection.tsx  Header.tsx  LandingHero.tsx  MapComponent.tsx  Sidebar.tsx
apps/web/src/pages/: _app.tsx  index.tsx
apps/web/src/styles/: globals.css
apps/worker/: __init__.py  main.py
infra/docker/: api.Dockerfile  worker.Dockerfile
scripts/: demo-comprehensive.py  start-dev.ps1  test-api-credentials.py
