[tool.poetry]
name = "pyroguard-sentinel"
version = "1.0.0"
description = "AI-powered wildfire risk assessment system"
authors = ["PyroGuard Team <team@pyroguard.ai>"]
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
boto3 = "^1.34.0"
rasterio = "^1.3.9"
clarifai-grpc = "^10.0.0"
clarifai = "^10.2.0"
inngest = "^0.2.4"
redis = "^5.0.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
anthropic = "^0.7.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 